--- a/partials/post-card.hbs
+++ b/partials/post-card.hbs
@@ -20,7 +20,7 @@
             {{#if author.profile_image}}
                 <img class="author-profile-image" src="{{author.profile_image}}" alt="{{author.name}}" />
             {{/if}}
-            <span class="post-card-author">{{author}}</span>
+            <span class="post-card-author">BY: {{author}}</span>
         </footer>
     </div>
 </article>
