.post-card-author color: color: var(--darkgrey);

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -456,6 +456,7 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
 }
 
 .post-card-author {
+    color: var(--darkgrey);
     font-size: 1.3rem;
     font-weight: 500;
     letter-spacing: 0.5px;
