--- a/assets/css/prism.css
+++ b/assets/css/prism.css
@@ -10,7 +10,7 @@ pre[class*="language-"] {
 	color: #f8f8f2;
 	background: none;
 	text-shadow: 0 1px rgba(0, 0, 0, 0.3);
-	font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+	font-family: Menlo, Monaco, Consolas 'Andale Mono', 'Ubuntu Mono', monospace;
 	text-align: left;
 	white-space: pre;
 	word-spacing: normal;
@@ -30,8 +30,9 @@ pre[class*="language-"] {
 
 /* Code blocks */
 pre[class*="language-"] {
-	padding: 1em;
-	margin: .5em 0;
+	/* padding: 1em; */
+	padding: 0px 1em 1.5em 1em;
+	/* margin: .5em 0; */
 	overflow: auto;
 	border-radius: 0.3em;
 }
