--- a/assets/css/prism.css
+++ b/assets/css/prism.css
@@ -10,7 +10,7 @@ pre[class*="language-"] {
 	color: #f8f8f2;
 	background: none;
 	text-shadow: 0 1px rgba(0, 0, 0, 0.3);
-	font-family: Menlo, Monaco, Consolas 'Andale Mono', 'Ubuntu Mono', monospace;
+	font-family: Consolas, Menlo, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
 	text-align: left;
 	white-space: pre;
 	word-spacing: normal;
@@ -34,7 +34,7 @@ pre[class*="language-"] {
 	padding: 0px 1em 1.5em 1em;
 	/* margin: .5em 0; */
 	overflow: auto;
-	border-radius: 0.3em;
+	/* border-radius: 0.3em; */
 }
 
 :not(pre) > code[class*="language-"],
