--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -763,7 +763,7 @@ Super neat trick courtesy of @JoelDrapper
     padding: 0 5px 2px;
     font-size: 0.8em;
     line-height: 1em;
-    font-weight: 400!important;
+    font-weight: 600!important;
     background: var(--whitegrey);
     border-radius: 3px;
 }
@@ -771,7 +771,7 @@ Super neat trick courtesy of @JoelDrapper
 .post-full-content pre {
     overflow-x: auto;
     margin: 1.0em 0 3em;
-    padding: 20px;
+    /* padding: 20px; */
     max-width: 100%;
     border: color(var(--darkgrey) l(-10%)) 1px solid;
     color: var(--whitegrey);
@@ -780,7 +780,7 @@ Super neat trick courtesy of @JoelDrapper
     /* background: color(var(--darkgrey) l(-3%)); */
     /* border-radius: 5px; */
     box-shadow: 0px -4px 0px rgba(0, 0, 0, 0.3),
-                -3px epx 25px rgba(0, 0, 0, 0.2);
+                -3px 3px 25px rgba(0, 0, 0, 0.2);
 }
 
 .post-full-content pre code {
