--- a/assets/css/prism.css
+++ b/assets/css/prism.css
@@ -5,8 +5,8 @@
  * @author ocodia
  */
 
-code[class*="language-"],
-pre[class*="language-"] {
+.post-full-content code[class*="language-"],
+.post-full-content pre[class*="language-"] {
 	color: #f8f8f2;
 	background: none;
 	text-shadow: 0 1px rgba(0, 0, 0, 0.3);
@@ -29,7 +29,7 @@ pre[class*="language-"] {
 }
 
 /* Code blocks */
-pre[class*="language-"] {
+.post-full-content pre[class*="language-"] {
 	/* padding: 1em; */
 	padding: 0px 1em 1.5em 1em;
 	/* margin: .5em 0; */
@@ -38,12 +38,12 @@ pre[class*="language-"] {
 }
 
 :not(pre) > code[class*="language-"],
-pre[class*="language-"] {
+.post-full-content pre[class*="language-"] {
 	background: #272822;
 }
 
 /* Inline code */
-:not(pre) > code[class*="language-"] {
+.post-full-content :not(pre) > code[class*="language-"] {
 	padding: .1em;
 	border-radius: .3em;
 	white-space: normal;
