--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -384,7 +384,7 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
     min-height: 300px;
     background: #fff center center;
     background-size: cover;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     box-shadow: rgba(39,44,49,0.06) 8px 14px 38px, rgba(39, 44, 49, 0.03) 1px 3px 8px;
     transition: all 0.5s ease;
 }
@@ -781,8 +781,9 @@ Super neat trick courtesy of @JoelDrapper
      /* background: color(var(--darkgrey) l(-3%)); */
     background: #272822;
     /* border-radius: 5px; */
-    box-shadow: 0px -4px 0px rgba(0, 0, 0, 0.3),
-                -3px 3px 25px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0px -4px 0px rgba(0, 0, 0, 0.3),
+                -3px 3px 25px rgba(0, 0, 0, 0.2); */
+    box-shadow: 0 0 1px rgba(39,44,49,0.10), 0 3px 16px rgba(39, 44, 49,0.07);
 }
 
 .post-full-content pre code {
